<?xml version="1.0"?>
<package format="3">
  <name>lyra_ros</name>
  <version>1.0.0</version>
  <description>ROS 2 wrapper for lyra_lib</description>
  <maintainer email="unknown@gmail.com">laim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>lyra_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>