<?xml version="1.0"?>
<package format="3">
  <name>lyra_ros_lib</name>
  <version>1.0.0</version>
  <description>Pure C++ logic library (PID, Kinematics)</description>
  <maintainer email="unknown@gmail.com">laim</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>launch_ros</depend>
  <depend>launch_xml</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>ros2launch</depend>
  <depend>lyra_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>